typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES6.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            54,
        ),
        hi: BytePos(
            72,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNamesDeclarationEmit4_ES6.ts:4:5
  |
4 |     ["" + ""](): void;
  |     ^^^^^^^^^^^^^^^^^^

